--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "stop-backend": "docker stop simpler-assignment-backend-vassilis-christopoulos && docker rm simpler-assignment-backend-vassilis-christopoulos",
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src",
     "preview": "vite preview",
     "test": "vitest",
     "coverage": "vitest run --coverage"
@@ -22,6 +22,7 @@
     "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -32,13 +33,16 @@
     "@vitejs/plugin-react-swc": "^3.3.2",
     "@vitest/coverage-v8": "^0.33.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.45.0",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "globals": "^16.0.0",
     "happy-dom": "^10.5.2",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.0.2",
+    "typescript-eslint": "^8.25.0",
     "vite": "^4.4.5",
     "vitest": "^0.33.0"
   }
